# lite-xl

./: .gitignore  meson.build
.github/workflows/: build.yml
data/core/: docview.lua  regex.lua
data/core/commands/: findreplace.lua
data/core/doc/: init.lua
data/plugins/: detectindent.lua
scripts/: build.sh
src/: meson.build  rencache.c  rencache.h  renderer.c  renderer.h  renwindow.c  renwindow.h
src/api/: api.c  api.h  renderer.c  texture.c
subprojects/: freetype2.wrap  lua.wrap  sdl2.wrap  sdl3.wrap
subprojects/packagefiles/SDL2-2.30.3/: meson.build
subprojects/packagefiles/freetype2/: enable_subpixel_rendering.diff
subprojects/packagefiles/sdl3-wrap/: meson.build  meson_options.txt
subprojects/packagefiles/sdl3-wrap/src/audio/: meson.build
subprojects/packagefiles/sdl3-wrap/src/audio/pipewire/: meson.build
subprojects/packagefiles/sdl3-wrap/src/camera/: meson.build
subprojects/packagefiles/sdl3-wrap/src/core/linux/: meson.build
subprojects/packagefiles/sdl3-wrap/src/dialog/: meson.build
subprojects/packagefiles/sdl3-wrap/src/gpu/: meson.build
subprojects/packagefiles/sdl3-wrap/src/haptic/: meson.build
subprojects/packagefiles/sdl3-wrap/src/hidapi/: meson.build
subprojects/packagefiles/sdl3-wrap/src/joystick/: meson.build
subprojects/packagefiles/sdl3-wrap/src/power/: meson.build
subprojects/packagefiles/sdl3-wrap/src/render/: meson.build
subprojects/packagefiles/sdl3-wrap/src/sensor/: meson.build
subprojects/packagefiles/sdl3-wrap/src/video/: meson.build
subprojects/packagefiles/sdl3-wrap/src/video/wayland/: meson.build
subprojects/packagefiles/sdl3-wrap/src/video/x11/: meson.build
